--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
   "beautifulsoup4>=4.12.3",
   "httpx>=0.27.0",
   "pypresence>=4.3.0",
+  "packaging>=24.0"
   #"yt-dlp>=2024.4.9",
   #"mpv>=1.0.6",
   #"httpx[socks]",
