--- a/src/gucken/default_settings.toml
+++ b/src/gucken/default_settings.toml
@@ -1,23 +1,39 @@
 # Default settings
 [settings]
-fullscreen  = true
-syncplay    = false
-ani-skip    = false
-#ani-skip_chapters = true
+fullscreen = true
+syncplay = false
 discord_presence = false
-language    = [
+language = [
     "DE",
     "EN",
     "EN_DESUB",
     "JP_DESUB",
     "JP_ENSUB"
 ]
-#player = "PLAYER"
-#player_args = ["--idk", "--owo"]
-#hoster = ["ST", "VEO"]
+hoster = [
+    "ST",
+    "VEO",
+    "VZ",
+    "DS"
+]
+update_checker = true
+
+[settings.ani_skip]
+skip_opening = false
+skip_ending = false
+chapters = false
+
+[settings.player]
+player = "AutomaticPlayer"
+#path = ""
+#args = ["--idk", "--owo"]
+
+[settings.autoplay]
+enabled = true
+#time = 3
 
 [settings.providers]
-aniworld_to     = true
+aniworld_to = true
 serienstream_to = false
 
 [meta]
