--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,12 +1,9 @@
-name: Upload Python Package
+name: Publish
 
 on:
-  release:
-    types:
-      - published
-
-permissions:
-  contents: read
+  push:
+    branches:
+      - main
 
 jobs:
   deploy:
@@ -14,22 +11,22 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29
-        
+
       - name: Set up Python 🧰
         uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d
         with:
           python-version: 3.x
-          
+
       - name: Install dependencies 🧰
         run: |
           python -m pip install --upgrade pip
           pip install build
-          
+
       - name: Build package 🔨
         run: python -m build
-        
+
       - name: Publish package 🚀
-        uses: pypa/gh-action-pypi-publish@81e9d935c883d0b210363ab89cf05f3894778450
+        uses: Commandcracker/pypi-publish@32e78ea691b666534c641470e9d74e4deca05bcc
         with:
-          user: __token__
-          password: '${{ secrets.PYPI_API_TOKEN }}'
+          password: ${{ secrets.PYPI_API_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
