--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ maintainers = [{name="Commandcracker"}]
 license = {file = "LICENSE.txt"}
 readme = "README.md"
 dependencies = [
-  "textual>=0.63.3",
+  "textual>=0.64.0",
   "beautifulsoup4>=4.12.3",
-  "httpx>=0.27.0",
+  "httpx[http2]>=0.27.0",
   "pypresence>=4.3.0",
   "packaging>=24.0",
   "platformdirs>=4.2.2",
