Make sh** faster (some cashing, regx improvements, orjson support), fix search lagging and crashing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,15 @@ maintainers = [{name="Commandcracker"}]
 license = {file = "LICENSE.txt"}
 readme = "README.md"
 dependencies = [
-  "textual>=0.64.0",
+  "textual>=0.67.0",
   "beautifulsoup4>=4.12.3",
   "httpx[http2]>=0.27.0",
   "pypresence>=4.3.0",
-  "packaging>=24.0",
+  "packaging>=24.1",
   "platformdirs>=4.2.2",
   "toml>=0.10.2",
-  "fuzzywuzzy>=0.18.0"
+  "fuzzywuzzy>=0.18.0",
+  "async_lru>=2.0.4"
   #"yt-dlp>=2024.4.9",
   #"mpv>=1.0.6",
 ]
@@ -47,7 +48,10 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
-levenshtein = ["levenshtein>=0.25.1"]
+speedups = [
+  "levenshtein>=0.25.1",
+  "orjson>=3.10.4"
+]
 socks = ["httpx[socks]>=0.27.0"]
 
 [project.urls]
