--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = {file = "LICENSE.txt"}
 readme = "README.md"
 dependencies = [
   "textual>=3.1.1",
+  "textual-image[textual]>=0.8.2",
   "beautifulsoup4>=4.13.4",
   "httpx[http2]>=0.28.1",
   "pypresence>=4.3.0",
