--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,18 +7,20 @@ maintainers = [{name="Commandcracker"}]
 license = {file = "LICENSE.txt"}
 readme = "README.md"
 dependencies = [
-  "textual>=3.1.1",
+  "textual>=3.2.0",
   "textual-image[textual]>=0.8.2",
   "beautifulsoup4>=4.13.4",
   "httpx[http2]>=0.28.1",
   "pypresence>=4.3.0",
   "packaging>=25.0",
-  "platformdirs>=4.3.7",
+  "platformdirs>=4.3.8",
   "toml>=0.10.2",
   "fuzzywuzzy>=0.18.0",
   "async_lru>=2.0.5",
-  "rich-argparse>=1.7.0"
-  #"yt-dlp>=2025.3.31",
+  "rich-argparse>=1.7.0",
+  "SQLAlchemy>=2.0.40",
+  "alembic>=1.15.2"
+  #"yt-dlp>=2025.4.30",
   #"mpv>=1.0.8",
 ]
 keywords = [
@@ -52,7 +54,7 @@ classifiers = [
 [project.optional-dependencies]
 speedups = [
   "levenshtein>=0.27.1",
-  "orjson>=3.10.16"
+  "orjson>=3.10.18"
 ]
 socks = ["httpx[socks]>=0.28.1"]
 
